--- a/src/app/pages/student/home/home.page.scss
+++ b/src/app/pages/student/home/home.page.scss
@@ -33,8 +33,8 @@ ion-content.home-content {
 }
 
 ion-progress-bar.task-progress {
-  --progress-background: #53ad0d;
-  --background: #e0e0e0;
+  --progress-background: linear-gradient(to bottom, #4ebc00, #55d300, #5cdd00, #55d300, #4ebc00);;
+  --background: #e5e5e5;
 }
 
 .task-item {
@@ -52,3 +52,4 @@ ion-progress-bar.task-progress {
   --padding-start: 15px;
   --padding-end: 15px;
 }
+
