--- a/src/theme/common.css
+++ b/src/theme/common.css
@@ -46,6 +46,19 @@
   color: white;
 }
 
+@keyframes float-up-down {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-12px);
+  }
+}
+
+.float-animation {
+  animation: float-up-down 2s infinite ease-in-out;
+}
+
 @keyframes shake {
   0% {
     transform: translateX(0);
@@ -68,7 +81,36 @@
 }
 
 .shake {
-  animation: shake 0.4s ease-in-out;
+  animation: shake 2s infinite;
+}
+
+@keyframes intense-shake-zoom {
+  0% {
+    transform: rotate(0deg) scale(1);
+  }
+  10% {
+    transform: rotate(-8deg) scale(1.1);
+  }
+  20% {
+    transform: rotate(8deg) scale(1.3);
+  }
+  30% {
+    transform: rotate(-8deg) scale(1.1);
+  }
+  40% {
+    transform: rotate(8deg) scale(1);
+  }
+  50% {
+    transform: rotate(0deg) scale(1);
+  }
+  100% {
+    transform: rotate(0deg) scale(1);
+  }
+}
+
+.intense-shake-zoom {
+  animation: intense-shake-zoom 1s infinite ease-in-out;
+  transform-origin: center;
 }
 
 /*-------------- Date time picker -------------*/
