--- a/src/app/pages/profile/account-and-security/personal-info/personal-info.component.html
+++ b/src/app/pages/profile/account-and-security/personal-info/personal-info.component.html
@@ -14,9 +14,7 @@
         <ion-row>
           <!--   Avatar for student   -->
           <ion-col size="12" class="ion-text-center" *ngIf="avatar">
-            <ion-img class="w-80 h-auto mx-auto"
-                     (click)="onClickSettingAvatar()"
-                     src="{{avatar.image_url ?? CommonConstants.detectMimeType(avatar.image_512) + avatar.image_512}}"></ion-img>
+            <ion-img class="w-80 h-auto mx-auto" (click)="onClickSettingAvatar()" src="{{avatar.resource_url}}"></ion-img>
           </ion-col>
 
           <!--   Avatar for parent / teacher    -->
