--- a/src/app/pages/student/rank/rank.page.html
+++ b/src/app/pages/student/rank/rank.page.html
@@ -17,59 +17,59 @@
                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"></ion-spinner>
 
   <!-- Rank content -->
-  <div class="pt-8 h-full" *ngIf="!isLoading && activeTab === 'rank' && leadershipList">
+  <div class="pt-8 h-full" *ngIf="!isLoading && activeTab === 'rank' && leaderboardList">
     <!-- Top 3 ranks -->
-    <div class="flex justify-around items-end pt-8 px-2.5 relative" *ngIf="leadershipList.length > 0">
-      <div class="flex flex-col items-center text-center w-1/3" *ngIf="leadershipList.length > 1 && leadershipList[1]">
+    <div class="flex justify-around items-end pt-8 px-2.5 relative" *ngIf="leaderboardList.length > 0">
+      <div class="flex flex-col items-center text-center w-1/3" *ngIf="leaderboardList.length > 1 && leaderboardList[1]">
         <div class="relative mb-2">
           <ion-img src="/assets/images/rank/trophy_2.png" alt="Silver Medal" class="w-[100px] h-auto block mx-auto mb-1"></ion-img>
           <div class="absolute bottom-[18px] left-0 right-0 text-[#fcefed] font-bold text-[10px] text-center">
-            {{ leadershipList[1].total_points }} {{ TranslateKeys.RANK_POINTS | translate }}
+            {{ leaderboardList[1].total_points }} {{ TranslateKeys.RANK_POINTS | translate }}
           </div>
         </div>
         <div class="flex items-center gap-2">
           <ion-avatar class="w-8 h-8 border border-blue-500">
-            <ion-img [src]="leadershipList[1].avatar" alt="Avatar"></ion-img>
+            <ion-img [src]="leaderboardList[1].avatar" alt="Avatar"></ion-img>
           </ion-avatar>
           <div
             class="text-xs font-medium text-gray-800 dark:text-gray-200 whitespace-nowrap overflow-hidden text-ellipsis max-w-[90%]">
-            {{ leadershipList[1].nickname }}
+            {{ leaderboardList[1].nickname }}
           </div>
         </div>
       </div>
 
-      <div class="flex flex-col items-center text-center w-1/3 transform -translate-y-12" *ngIf="leadershipList[0]">
+      <div class="flex flex-col items-center text-center w-1/3 transform -translate-y-12" *ngIf="leaderboardList[0]">
         <div class="relative mb-2">
           <ion-img src="/assets/images/rank/trophy_1.png" alt="Gold Trophy" class="w-[150px] h-auto block mx-auto mb-1"></ion-img>
           <div class="absolute bottom-[25px] left-0 right-0 text-[#fcefed] font-bold text-[10px] text-center">
-            {{ leadershipList[0].total_points }} {{ TranslateKeys.RANK_POINTS | translate }}
+            {{ leaderboardList[0].total_points }} {{ TranslateKeys.RANK_POINTS | translate }}
           </div>
         </div>
         <div class="flex items-center gap-2">
           <ion-avatar class="w-8 h-8 border border-blue-500">
-            <ion-img [src]="leadershipList[0].avatar" alt="Avatar"></ion-img>
+            <ion-img [src]="leaderboardList[0].avatar" alt="Avatar"></ion-img>
           </ion-avatar>
           <div
             class="text-xs font-medium text-gray-800 dark:text-gray-200 whitespace-nowrap overflow-hidden text-ellipsis max-w-[90%]">
-            {{ leadershipList[0].nickname }}
+            {{ leaderboardList[0].nickname }}
           </div>
         </div>
       </div>
 
-      <div class="flex flex-col items-center text-center w-1/3" *ngIf="leadershipList.length > 2 && leadershipList[2]">
+      <div class="flex flex-col items-center text-center w-1/3" *ngIf="leaderboardList.length > 2 && leaderboardList[2]">
         <div class="relative mb-2">
           <ion-img src="/assets/images/rank/trophy_3.png" alt="Bronze Medal" class="w-[100px] h-auto block mx-auto mb-1"></ion-img>
           <div class="absolute bottom-[18px] left-0 right-0 text-[#fcefed] font-bold text-[10px] text-center">
-            {{ leadershipList[2].total_points }} {{ TranslateKeys.RANK_POINTS | translate }}
+            {{ leaderboardList[2].total_points }} {{ TranslateKeys.RANK_POINTS | translate }}
           </div>
         </div>
         <div class="flex items-center gap-2">
           <ion-avatar class="w-8 h-8 border border-blue-500">
-            <ion-img [src]="leadershipList[2].avatar" alt="Avatar" class=""></ion-img>
+            <ion-img [src]="leaderboardList[2].avatar" alt="Avatar" class=""></ion-img>
           </ion-avatar>
           <div
             class="text-xs font-medium text-gray-800 dark:text-gray-200 whitespace-nowrap overflow-hidden text-ellipsis max-w-[90%]">
-            {{ leadershipList[2].nickname }}
+            {{ leaderboardList[2].nickname }}
           </div>
         </div>
       </div>
@@ -86,7 +86,7 @@
 
       <div class="flex-1 overflow-y-auto"
            #rankTableBody
-           [class]="shouldShowFixedUserLeadership() && userLeadership ? 'mb-[35px]' : 'mb-[45px]'"
+           [class]="shouldShowFixedUserLeaderboard() && userLeaderboard ? 'mb-[35px]' : 'mb-[45px]'"
            (scroll)="checkCurrentUserVisibility()">
         <!-- Start loop from the 4th item (index 3) -->
         <div class="flex items-center py-2 px-2.5 border-b border-gray-100 dark:border-gray-700 text-sm"
@@ -94,7 +94,7 @@
              [class.text-gray-800]="item['isCurrentUser']"
              [class.dark:text-gray-800]="item['isCurrentUser']"
              [class.current-user]="item['isCurrentUser']"
-             *ngFor="let item of leadershipList.slice(3)"
+             *ngFor="let item of leaderboardList.slice(3)"
              [attr.data-user-id]="item?.teenager_id?.id ?? item?.id">
           <div class="w-[15%] text-center font-medium">{{ item.ranking }}</div>
           <div class="w-[60%] flex items-center text-left pl-1">
@@ -107,23 +107,23 @@
         </div>
 
         <!--    Load more rank data    -->
-        <ion-infinite-scroll (ionInfinite)="loadMoreRankData($event)">
+        <ion-infinite-scroll (ionInfinite)="loadMoreLeaderboardData($event)">
           <ion-infinite-scroll-content></ion-infinite-scroll-content>
         </ion-infinite-scroll>
       </div>
 
       <!-- Fixed current user rank at bottom if ranking >= 10 and not yet scrolled to that row -->
       <div class="sticky bottom-0 left-0 right-0 z-10 bg-transparent p-0"
-           *ngIf="shouldShowFixedUserLeadership() && userLeadership">
+           *ngIf="shouldShowFixedUserLeaderboard() && userLeaderboard">
         <div class="flex items-center py-2 px-2.5 text-sm bg-blue-400 text-gray-800 my-1">
-          <div class="w-[15%] text-center font-medium">{{ userLeadership.ranking }}</div>
+          <div class="w-[15%] text-center font-medium">{{ userLeaderboard.ranking }}</div>
           <div class="w-[60%] flex items-center pl-1">
             <ion-avatar class="w-9 h-9 border border-blue-500">
-              <ion-img [src]="userLeadership.avatar" alt="Avatar"></ion-img>
+              <ion-img [src]="userLeaderboard.avatar" alt="Avatar"></ion-img>
             </ion-avatar>
-            <span class="whitespace-nowrap overflow-hidden text-ellipsis">{{ userLeadership.nickname }}</span>
+            <span class="whitespace-nowrap overflow-hidden text-ellipsis">{{ userLeaderboard.nickname }}</span>
           </div>
-          <div class="w-[25%] text-right font-medium pr-1">{{ userLeadership.total_points }}</div>
+          <div class="w-[25%] text-right font-medium pr-1">{{ userLeaderboard.total_points }}</div>
         </div>
       </div>
     </div>
@@ -131,49 +131,37 @@
 
   <!-- Achievements content -->
   <div class="text-gray-700 dark:text-gray-300" *ngIf="!isLoading && activeTab === 'achievements'">
-    <ion-list>
-      <ion-item-group *ngFor="let category of achievements">
-        <ion-card class="mx-3 my-3 rounded-xl shadow-md overflow-hidden">
-          <ion-card-header class="p-1">
-            <ion-card-title class="text-base font-bold p-1 text-gray-800 dark:text-gray-200">{{ category.name ? (category.name | translate) : '' }}
-            </ion-card-title>
-          </ion-card-header>
+    <!--  Emotion badges  -->
+    <app-badge-horizontal-list
+      [areaOfExpertise]="AreaOfExpertise.EMOTION"
+      [achievements]="achievements"
+      [badges]="emotionBadges"
+      (ionInfinite)="loadMoreBadges($event, AreaOfExpertise.EMOTION)">
+    </app-badge-horizontal-list>
 
-          <ion-card-content class="p-0 pb-3">
-            <div *ngIf="!category['badges'] || category['badges'].length === 0" class="p-4 text-center text-gray-500">
-              {{ TranslateKeys.BADGE_NO_ACHIEVEMENTS_YET | translate }}
-            </div>
+    <!--  Conflict badges  -->
+    <app-badge-horizontal-list
+      [areaOfExpertise]="AreaOfExpertise.CONFLICT"
+      [achievements]="achievements"
+      [badges]="conflictBadges"
+      (ionInfinite)="loadMoreBadges($event, AreaOfExpertise.CONFLICT)">
+    </app-badge-horizontal-list>
 
-            <ion-grid *ngIf="category['badges'] && category['badges'].length > 0">
-              <ion-row>
-                <ion-col size="4" *ngFor="let badge of category['badges'] || []">
-                  <div
-                    class="relative text-center p-1 pt-2 rounded-lg bg-white dark:bg-gray-700 m-1 transition-transform hover:scale-105"
-                    [class.opacity-40]="!badge.unlocked"
-                    [class.filter-grayscale]="!badge.unlocked">
-                    <ion-img [src]="badge.image || 'assets/images/badges/default-badge.png'"
-                             class="w-20 h-auto max-h-20 mx-auto block" [alt]="badge.name"></ion-img>
-                    <ion-badge *ngIf="badge.isNew"
-                               class="absolute top-1 p-0.5 px-1 right-1.5 text-xs z-2 bg-red-500 border border-red-100 text-white rounded">
-                      {{ TranslateKeys.BADGE_NEW | translate }}
-                    </ion-badge>
-                    <div
-                      class="font-medium mt-0.5 text-xs text-gray-700 dark:text-gray-300 font-comic-sans">{{ badge.name }}
-                    </div>
-                  </div>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-          </ion-card-content>
-        </ion-card>
-      </ion-item-group>
+    <!--  Communication badges  -->
+    <app-badge-horizontal-list
+      [areaOfExpertise]="AreaOfExpertise.COMMUNICATION"
+      [achievements]="achievements"
+      [badges]="communicationBadges"
+      (ionInfinite)="loadMoreBadges($event, AreaOfExpertise.COMMUNICATION)">
+    </app-badge-horizontal-list>
 
-      <!-- No achievements message -->
-      <div *ngIf="achievements.length === 0" class="p-8 text-center">
-        <ion-icon name="trophy-outline" class="text-6xl text-gray-400 mb-4"></ion-icon>
-        <p class="text-gray-500">{{ TranslateKeys.BADGE_NO_ACHIEVEMENTS_YET | translate }}</p>
-      </div>
-    </ion-list>
+    <!--  Discovery badges  -->
+    <app-badge-horizontal-list
+      [areaOfExpertise]="AreaOfExpertise.DISCOVERY"
+      [achievements]="achievements"
+      [badges]="discoveryBadges"
+      (ionInfinite)="loadMoreBadges($event, AreaOfExpertise.DISCOVERY)">
+    </app-badge-horizontal-list>
   </div>
 </ion-content>
 
