fix(sound-native): sửa lỗi phát âm thanh nền

--- a/src/app/pages/student/home/home.page.html
+++ b/src/app/pages/student/home/home.page.html
@@ -74,7 +74,7 @@
       <h3 class="text-base italic font-bold text-blue-400">{{ TranslateKeys.HOME_WELCOME_TITLE | translate }}</h3>
       <ion-icon name="checkmark-circle" class="mr-8 font-bold text-[#53ad0d] text-xl"></ion-icon>
     </div>
-    <p class="text-sm shadow-sm">{{ TranslateKeys.HOME_WELCOME_SUBTITLE | translate }}</p>
+    <p class="text-sm font-medium">{{ TranslateKeys.HOME_WELCOME_SUBTITLE | translate }}</p>
 
     <div class="flex gap-1 items-center">
       <ion-progress-bar class="task-progress h-4" type="determinate" [value]="progress.completed / progress.total"></ion-progress-bar>
